[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcgymrl"
version = "0.4.0"
description = "A package for \"Procedural Content Generation via Reinforcement Learning\" OpenAI Gym interface."
authors = [
    {name = "Ahmed Khalifa", email = "ahmed@akhalifa.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.17",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/amidos2006/gym-pcgrl"

[tool.setuptools]
packages = ["pcgymrl"]

[tool.setuptools.package-data]
gym_pcgrl = ["**/*.png"]

[tool.uv]
dev-dependencies = []
